# railrailrail

./: .gitignore  .pre-commit-config.yaml  CONFIG.md  LICENSE-DATASET  LICENSE-DATASET.md  Makefile  README.md  TRAIN_SPOTTERS.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml
analysis/: MasterPlan2019PlanningAreaBoundaryNoSea.geojson  analysis.ipynb  analysis_helpers.py
config/: ResidentPopulationbyPlanningAreaSubzoneandTypeofDwelling.csv  network.toml  network_bplrt.toml  network_brickland.toml  network_buangkok.toml  network_canberra.toml  network_ccl_1_and_ccl_2.toml  network_ccl_3.toml  network_ccl_4_and_ccl_5.toml  network_ccl_6.toml  network_ccl_e.toml  network_cg_tel_c.toml  network_cheng_lim.toml  network_crl_1.toml  network_crl_2.toml  network_crl_pe.toml  network_dover.toml  network_dtl_1.toml  network_dtl_2.toml  network_dtl_3.toml  network_ewl_boon_lay_extension.toml  network_ewl_changi_airport.toml  network_ewl_expo.toml  network_ewl_tuas_extension.toml  network_farmway.toml  network_founders_memorial.toml  network_future.toml  network_hume.toml  network_jrl_1.toml  network_jrl_2.toml  network_jrl_3.toml  network_kupang.toml  network_marina_south_pier.toml  network_nel.toml  network_oasis.toml  network_pglrt_east_loop_and_sklrt_west_loop.toml  network_pglrt_west_loop.toml  network_phase_1_1.toml  network_phase_1_2.toml  network_phase_1a.toml  (+23 more)
config_examples/: network_bplrt.toml  network_brickland.toml  network_buangkok.toml  network_canberra.toml  network_ccl_1_and_ccl_2.toml  network_ccl_3.toml  network_ccl_4_and_ccl_5.toml  network_ccl_6.toml  network_ccl_e.toml  network_cg_tel_c.toml  network_cheng_lim.toml  network_crl_1.toml  network_crl_2.toml  network_crl_pe.toml  network_dover.toml  network_dtl_1.toml  network_dtl_2.toml  network_dtl_2e.toml  network_dtl_3.toml  network_ewl_boon_lay_extension.toml  network_ewl_changi_airport.toml  network_ewl_expo.toml  network_ewl_tuas_extension.toml  network_farmway.toml  network_founders_memorial.toml  network_future.toml  network_hume.toml  network_jrl_1.toml  network_jrl_2.toml  network_jrl_3.toml  network_jrl_js2a.toml  network_kupang.toml  network_marina_south_pier.toml  network_nel.toml  network_nel_extension.toml  network_oasis.toml  network_pglrt_east_loop_and_sklrt_west_loop.toml  network_pglrt_west_loop.toml  network_phase_1_1.toml  network_phase_1_2.toml  (+25 more)
docs/: COMMANDS.md  CONFIG.md  MISC.md
railrailrail/: cli.py  config.py  dataset.py  logger.py  railgraph.py  utils.py
railrailrail/dataset/: conditional_interchange.py  (+5 more)
tests/: test_cli.py  test_config.py  test_coordinates.py  test_dataset.py  test_network.py  test_network_bplrt.toml  test_network_jrl_3.toml  test_network_phase_2b_2.toml  test_network_tel_4.toml  test_railgraph.py  test_station_coordinates.csv  test_trips.toml  test_utils.py
(+35 files in other folders)
