[project]
name = "railrailrail"
version = "0.0.1"
description = "Route planner for the Singapore MRT/LRT rail network."
authors = [{ name = "Wu Tingfeng", email = "wutingfeng@outlook.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "dijkstar>=2.6.0",
    "geopandas>=1.1.1",
    "immutabledict>=4.2.2",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "plotly>=5.24.1",
    "psutil>=7.2.1",
    "requests>=2.32.5",
    "statsmodels>=0.14.6",
    "tomlkit>=0.13.3",
    "xlrd>=2.0.2",
    "jupyter>=1.1.1",
]

[tool.pyrefly]
project-includes = ["**/*.py*"]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["uv_build >=0.9.21"]
build-backend = "uv_build"

[tool]
